# ward

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  select.tsx  textarea.tsx
frontend/src/lib/: api.ts
src/: cli.ts  db.ts  git.ts  paths.ts  schemas.ts  server.ts
tests/: test_core.py  ward.test.ts
ward/: api.py  cli.py  db.py  git.py  schemas.py
